--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -10,6 +10,11 @@ html {
   box-sizing: inherit;
 }
 
+nav#tweeterNav {
+  font-family: 'Bungee', cursive;
+  float: left;
+}
+
 /*
  * Global layout stuff
  */
@@ -18,8 +23,14 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  margin: 5%;
+  background-color: #f4f1ec;
+ }
