--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -34,3 +34,37 @@ body {
   margin: 5%;
   background-color: #f4f1ec;
  }
+
+ /* Responsive styles */
+ /* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  header#profileHeader {
+    width: 33.3%;
+    float: left;
+  }
+
+  /* .feature {
+    line-height: 300px;
+  } */
+
+  /* .tweeterNav {
+    background-color: #111111;
+    color: #f0f0f0;
+    text-align: left;
+  } */
+
+  /* .tagline {
+    display: inline;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 12px;
+    color: tomato;
+    float: right;
+  } */
+
+  /* .main {
+    max-width: 1024px;
+    font-size: 16px;
+    margin: 0 auto;
+  } */
+}
