--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,3 +21,20 @@ div#btnAndSpan {
 span.counter {
   float: right;
 }
+
+/* Error styling */
+div#errorContainer {
+  border: 5px solid #ff0000;
+  display: none;
+}
+i.fa-exclamation-triangle {
+  left: 0px;
+  margin-left: 1em;
+}
+div.inlineContainer h4, i.fa-exclamation-triangle {
+  display: inline;
+}
+h4#errorMessage {
+  color: #ff0000;
+  margin-left: 1em;
+}
