--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -2,6 +2,7 @@ article {
   border: 5px solid;
   margin-top: 50px;
   opacity: 0.8;
+  word-wrap: break-word;
 }
 
 article.tweet span {
@@ -34,6 +35,11 @@ article:hover span#tweeterName {
 
 article.tweet p {
   margin-left: 1.5em;
+  margin-right: 1.5em;
+}
+
+article.tweet p span{
+  display: block;
 }
 
 article.tweet header {
