--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,8 +20,8 @@ nav#tweeterNav {
  */
 
 body {
-  color: #545149;
-  background-color: #f4f1ec;
+  color: #ffffff;
+  background-color: #1a1a1d;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -32,20 +32,54 @@ body {
 
  main {
   margin: 5%;
-  background-color: #f4f1ec;
+  background-color: #1a1a1d;
  }
 
  /* Responsive styles */
- /* Desktop styles */
-@media only screen and (min-width: 1024px) {
-  header#profileHeader {
-    width: 33.3%;
-    float: left;
+
+/* Tablet Styles */
+@media only screen and (min-width: 768px) {
+  nav {
+    background-color: #4e4e50;
+    background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
   }
 
-  /* .feature {
-    line-height: 300px;
+  header#profileHeader {
+    height: 400px;
+    width: 100%;
+    margin-top: 120px;
+  }
+
+  /* .content {
+    width: 66.7%;
+    float: right
+  }
+
+  .footer {
+    clear: right;
   } */
+}
+
+ /* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  nav {
+    background-color: #4e4e50;
+  }
+
+  header#profileHeader {
+    width: 35%;
+    float: left;
+    /* add innder shadow for style! */
+    -moz-box-shadow:    inset 0 10px 20px #1a1a1d;
+    -webkit-box-shadow: inset 0 10px 20px #1a1a1d;
+    box-shadow:         inset 10px 10px 10px 20px #1a1a1d;
+  }
+
+  main.container {
+    width: 50%;
+    float: right;
+    margin-top: 120px;
+  }
 
   /* .tweeterNav {
     background-color: #111111;
