--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -67,6 +67,7 @@ article.tweet div {
 /* re position my icon (was set as left: 50% from nav.css) */
 article.tweet i {
   left: 0px;
+  color: #c3073f;
 }
 
 article.tweet div#tweetIcons {
